📍 Implement Schema Versioning NoSQL pattern (#5)
Reviewed-on: https://codefirst.iut.uca.fr/git/alexis.drai/AD_MongoDB/pulls/5
